# EltexIRC

./: .gitignore  AUTHORS  COPYING  Makefile.am  Makefile.in  README.md  configure  configure.ac
client/: Makefile.am  Makefile.in  client.c  irc_client  name_canal  name_server
lib/: Makefile.am  Makefile.in  irc_limits.h  irc_msgread.c  irc_msgread.h  ircstr.c  msgparse.c  msgparse.h
server/: Makefile.am  Makefile.in  connect.c  connect.h  irc_limits.h  ircstr.h  main.c  msgparse.c  msgparse.h  privmsgsend.c  privmsgsend.h  server_respond.c  server_respond.h  thread_info.h  users.c  users.h  users_list.c  users_list.h
